@@ -1,7 +1,7 @@
 package org.intermine.web.struts;
 
 /*
- * Copyright (C) 2002-2013 FlyMine
+ * Copyright (C) 2002-2015 FlyMine
  *
  * This code may be freely distributed and modified under the
  * terms of the GNU Lesser General Public Licence.  This should
@@ -20,6 +20,7 @@ import java.net.MalformedURLException;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.sql.Statement;
 import java.sql.Types;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -28,6 +29,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -41,6 +43,7 @@ import javax.servlet.ServletContext;
 import javax.servlet.ServletException;
 
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang.StringUtils;
 import org.apache.log4j.Logger;
 import org.apache.struts.action.ActionServlet;
 import org.apache.struts.action.PlugIn;
@@ -60,12 +63,14 @@ import org.intermine.api.query.MainHelper;
 import org.intermine.api.search.GlobalRepository;
 import org.intermine.api.search.SearchRepository;
 import org.intermine.api.tag.TagNames;
+import org.intermine.api.tag.TagTypes;
 import org.intermine.api.tracker.Tracker;
 import org.intermine.api.tracker.TrackerDelegate;
 import org.intermine.api.tracker.util.TrackerUtil;
+import org.intermine.api.types.ClassKeys;
 import org.intermine.metadata.ClassDescriptor;
-import org.intermine.metadata.FieldDescriptor;
 import org.intermine.metadata.Model;
+import org.intermine.metadata.TypeUtil;
 import org.intermine.model.InterMineObject;
 import org.intermine.model.userprofile.Tag;
 import org.intermine.model.userprofile.UserProfile;
@@ -77,11 +82,10 @@ import org.intermine.objectstore.ObjectStoreSummary;
 import org.intermine.objectstore.ObjectStoreWriter;
 import org.intermine.objectstore.ObjectStoreWriterFactory;
 import org.intermine.objectstore.intermine.ObjectStoreInterMineImpl;
-import org.intermine.objectstore.intermine.ObjectStoreWriterInterMineImpl;
 import org.intermine.sql.Database;
 import org.intermine.sql.DatabaseUtil;
 import org.intermine.util.PropertiesUtil;
-import org.intermine.util.TypeUtil;
+import org.intermine.util.ShutdownHook;
 import org.intermine.web.autocompletion.AutoCompleter;
 import org.intermine.web.context.InterMineContext;
 import org.intermine.web.logic.Constants;
@@ -90,6 +94,8 @@ import org.intermine.web.logic.aspects.AspectBinding;
 import org.intermine.web.logic.config.FieldConfig;
 import org.intermine.web.logic.config.FieldConfigHelper;
 import org.intermine.web.logic.config.WebConfig;
+import org.intermine.web.logic.profile.LoginHandler;
+import org.intermine.web.logic.profile.UpgradeBagList;
 import org.intermine.web.logic.session.SessionMethods;
 import org.intermine.webservice.server.query.result.XMLValidator;
 import org.jfree.util.Log;
@@ -112,6 +118,14 @@ public class InitialiserPlugin implements PlugIn
     /** The list of tags that mark something as public */
     public static final List<String> PUBLIC_TAG_LIST = Arrays.asList(TagNames.IM_PUBLIC);
 
+    private static final Map<String, String> DERIVED_PROPERTIES = new HashMap<String, String>() {
+        {
+            put("jwt.publicidentity", "project.title");
+        }
+    };
+
+    private ObjectStoreWriter userprofileOSW;
+
     /**
      * Init method called at Servlet initialisation
      *
@@ -123,122 +137,205 @@ public class InitialiserPlugin implements PlugIn
      * @throws ServletException if this <code>PlugIn</code> cannot
      * be successfully initialized
      */
+    @Override
     public void init(ActionServlet servlet, ModuleConfig config) throws ServletException {
 
         // NOTE throwing exceptions other than a ServletException from this class causes the
         // webapp to fail to deploy with no error message.
 
+        final long start = System.currentTimeMillis();
+
         final ServletContext servletContext = servlet.getServletContext();
         initBlockingErrors(servletContext);
 
         // initialise properties
-        Properties webProperties = loadWebProperties(servletContext);
+        final Properties webProperties = loadWebProperties(servletContext);
+        if (webProperties == null) {
+            throw new ServletException("webProperties is null");
+        }
 
         // read in additional webapp specific information and put in servletContext
         loadAspectsConfig(servletContext);
         loadClassDescriptions(servletContext);
         loadOpenIDProviders(servletContext);
-
-        // get link redirector
-        LinkRedirectManager redirect = getLinkRedirector(webProperties);
+        loadOAuth2Providers(servletContext, webProperties);
 
         // set up core InterMine application
         os = getProductionObjectStore(webProperties);
-        WebConfig webConfig = null;
-        if (os != null) {
-            webConfig = loadWebConfig(servletContext, os);
+        if (os == null) {
+            throw new ServletException("Production object store is null");
+        }
+        final WebConfig webConfig = loadWebConfig(servletContext, os);
+        if (webConfig == null) {
+            throw new ServletException("webConfig is null");
         }
 
-        final ObjectStoreWriter userprofileOSW = getUserprofileWriter(webProperties);
-
-        if (userprofileOSW != null) {
-            //verify all table mapping classes exist in the userprofile db
-            if (!verifyTablesExist(userprofileOSW)) {
-                return;
-            }
-            if (!verifySuperUserExist(userprofileOSW)) {
-                return;
-            }
-            //verify if intermine_state exists in the savedbag table and if it has the right type
-            if (!verifyListTables(userprofileOSW)) {
-                return;
-            }
-            //verify if we the webapp needs to upgrade the lists
-            verifyListUpgrade(userprofileOSW);
+        userprofileOSW = getUserprofileWriter(webProperties);
+        if (userprofileOSW == null) {
+            throw new ServletException("userprofileOSW is null");
         }
+
+        verifyUserProfile(userprofileOSW);
 
         final ObjectStoreSummary oss = summariseObjectStore(servletContext);
 
-        if (webProperties != null && userprofileOSW != null) {
-            trackerDelegate = initTrackers(webProperties, userprofileOSW);
+        if (oss != null) {
+            setupClassSummaryInformation(servletContext, oss, os.getModel());
         }
 
-        if (os != null && webProperties != null) {
-            final Map<String, List<FieldDescriptor>> classKeys = loadClassKeys(os.getModel());
-            final BagQueryConfig bagQueryConfig = loadBagQueries(servletContext, os, webProperties);
+        trackerDelegate = initTrackers(webProperties, userprofileOSW);
 
-            if (userprofileOSW != null) {
-                final InterMineAPI im;
-                try {
-                    im = new InterMineAPI(os, userprofileOSW, classKeys, bagQueryConfig,
-                                          oss, trackerDelegate, redirect);
-                } catch (UserNotFoundException unfe) {
-                    blockingErrorKeys.put("errors.init.superuser", null);
-                    return;
+
+        final InterMineAPI im = loadInterMineAPI(
+                servletContext, webProperties, webConfig, userprofileOSW, oss);
+
+        // need a global reference to ProfileManager so it can be closed cleanly on destroy
+        profileManager = im.getProfileManager();
+
+        // Verify that the superuser found in the DB matches the user set in the properties file.
+        final Profile superProfile = profileManager.getSuperuserProfile();
+        initSuperUser(superProfile);
+        try {
+            startBagUpgrade(im, profileManager.getAllSuperUsers());
+        } catch (ObjectStoreException e) {
+            throw new ServletException("Could not read from userprofile data store", e);
+        }
+
+        initSearch(servletContext, superProfile);
+
+        servletContext.setAttribute(Constants.GRAPH_CACHE, new HashMap<String, String>());
+
+        loadAutoCompleter(servletContext, os);
+        LOG.debug("LOADED AUTO COMPLETER");
+
+        cleanTags(im.getTagManager());
+
+        initKeylessClasses(servletContext, webConfig);
+
+        doRegistration(webProperties);
+
+        LOG.debug("Application initialised in " + (System.currentTimeMillis() - start) + "ms");
+    }
+
+    private void initSearch(final ServletContext servletContext,
+            final Profile superProfile) {
+        // index global webSearchables
+        SearchRepository searchRepository = new GlobalRepository(superProfile);
+        List<String> users = profileManager.getSuperUsers();
+        for (String su : users) {
+            new GlobalRepository(profileManager.getProfile(su));
+        }
+        SessionMethods.setGlobalSearchRepository(servletContext, searchRepository);
+        LOG.debug("LOADED SEARCH REPOSITORY");
+    }
+
+    private void initSuperUser(final Profile superProfile) {
+        if (!superProfile.getUsername()
+            .equals(PropertiesUtil.getProperties().getProperty("superuser.account").trim())) {
+            blockingErrorKeys.put("errors.init.superuser", null);
+        }
+
+        LOG.debug("CHECKED SUPER PROFILE");
+    }
+
+    private void startBagUpgrade(final InterMineAPI im, final Collection<Profile> users) {
+
+        // Start the bag upgrade for all of a set of users.
+        for (Profile user: users) {
+            if (!im.getBagManager().isAnyBagInState(user, BagState.UPGRADING)) {
+                UpgradeBagList upgrade = new UpgradeBagList(user, im.getBagQueryRunner());
+                LoginHandler.runBagUpgrade(upgrade, im, user);
+            }
+            LOG.info("UPGRADING BAGS FOR " + user.getUsername());
+        }
+    }
+
+    private void initKeylessClasses(
+            final ServletContext servletContext,
+            final WebConfig webConfig) {
+        Map<String, Boolean> keylessClasses = new HashMap<String, Boolean>();
+        for (ClassDescriptor cld : os.getModel().getClassDescriptors()) {
+            boolean keyless = true;
+            for (FieldConfig fc : FieldConfigHelper.getClassFieldConfigs(webConfig,
+                                                                         cld)) {
+                if ((fc.getDisplayer() == null) && fc.getShowInSummary()) {
+                    keyless = false;
+                    break;
                 }
-                SessionMethods.setInterMineAPI(servletContext, im);
+            }
+            if (keyless) {
+                keylessClasses.put(TypeUtil.unqualifiedName(cld.getName()),
+                                                            Boolean.TRUE);
+            }
+        }
+        servletContext.setAttribute(Constants.KEYLESS_CLASSES_MAP, keylessClasses);
+    }
 
-                InterMineContext.initilise(im, webProperties, webConfig);
+    private InterMineAPI loadInterMineAPI(
+            final ServletContext servletContext,
+            final Properties webProperties,
+            final WebConfig webConfig,
+            final ObjectStoreWriter userprofileOSW,
+            final ObjectStoreSummary oss) throws ServletException {
+        final ClassKeys classKeys = loadClassKeys(os.getModel());
+        final BagQueryConfig bagQueryConfig = loadBagQueries(servletContext, os, webProperties);
+        final LinkRedirectManager redirector = getLinkRedirector(webProperties);
 
-                // need a global reference to ProfileManager so it can be closed cleanly on destroy
-                profileManager = im.getProfileManager();
+        final InterMineAPI im;
+        try {
+            im = new InterMineAPI(os, userprofileOSW, classKeys, bagQueryConfig,
+                                  oss, trackerDelegate, redirector);
+        } catch (UserNotFoundException unfe) {
+            blockingErrorKeys.put("errors.init.superuser", null);
+            throw new ServletException("Super user not found");
+        }
+        SessionMethods.setInterMineAPI(servletContext, im);
+        ResourceFinder finder = new ResourceFinder(servletContext);
 
-                //verify superuser setted in the db matches with the user in the properties file
-                final Profile superProfile = profileManager.getSuperuserProfile();
-                if (!superProfile.getUsername()
-                    .equals(PropertiesUtil.getProperties().getProperty("superuser.account")
-                    .trim())) {
-                    blockingErrorKeys.put("errors.init.superuser", null);
-                }
+        InterMineContext.initialise(im, webProperties, webConfig, finder);
+        return im;
+    }
 
-                // index global webSearchables
-                SearchRepository searchRepository = new GlobalRepository(superProfile);
-                List<String> users = profileManager.getSuperUsers();
-                for (String su : users) {
-                    new GlobalRepository(profileManager.getProfile(su));
-                }
-                SessionMethods.setGlobalSearchRepository(servletContext, searchRepository);
+    private void verifyUserProfile(final ObjectStoreWriter userprofileOSW)
+        throws ServletException {
+        if (userprofileOSW != null) {
+            //verify all table mapping classes exist in the userprofile db
+            if (!verifyTablesExist(userprofileOSW)) {
+                throw new ServletException("Userprofile is missing required tables.");
+            }
+            if (!verifySuperUserExist(userprofileOSW)) {
+                throw new ServletException("Userprofile does not have a super user.");
+            }
+            //verify if intermine_state exists in the savedbag table and if it has the right type
+            if (!verifyListTables(userprofileOSW)) {
+                throw new ServletException("Userprofile is missing list tables.");
+            }
+            //verify if we the webapp needs to upgrade the lists
+            checkSerialNumber(userprofileOSW);
 
-                servletContext.setAttribute(Constants.GRAPH_CACHE, new HashMap<String, String>());
+        }
+    }
 
-                loadAutoCompleter(servletContext, os);
-
-                cleanTags(im.getTagManager());
-
-                if (webConfig != null) {
-                    Map<String, Boolean> keylessClasses = new HashMap<String, Boolean>();
-                    for (ClassDescriptor cld : os.getModel().getClassDescriptors()) {
-                        boolean keyless = true;
-                        for (FieldConfig fc : FieldConfigHelper.getClassFieldConfigs(webConfig,
-                                                                                     cld)) {
-                            if ((fc.getDisplayer() == null) && fc.getShowInSummary()) {
-                                keyless = false;
-                                break;
-                            }
-                        }
-                        if (keyless) {
-                            keylessClasses.put(TypeUtil.unqualifiedName(cld.getName()),
-                                                                        Boolean.TRUE);
-                        }
-                    }
-                    servletContext.setAttribute(Constants.KEYLESS_CLASSES_MAP, keylessClasses);
-                }
-
-                if (oss != null) {
-                    setupClassSummaryInformation(servletContext, oss, os.getModel());
-                }
-
-                doRegistration(webProperties);
+    private void createPermaTokenTable(ObjectStore os, Connection con)
+        throws SQLException, ObjectStoreException, ClassNotFoundException {
+        ClassDescriptor cd = os.getModel().getClassDescriptorByName("PermanentToken");
+        Database db = ((ObjectStoreInterMineImpl) os).getDatabase();
+        if (cd == null) {
+            throw new IllegalStateException("Expected model to contain PermanentToken");
+        }
+        String tableDef = DatabaseUtil.getTableDefinition(db, cd);
+        LOG.info("Adding table for " + cd.getName());
+        LOG.debug(tableDef);
+        // It might be worthwhile at some point adding an index, but
+        // a) the data set is expected to be reasonably small, and
+        // b) the profile manager manages an in memory index of its own.
+        Statement s = null;
+        try {
+            s = con.createStatement();
+            s.execute(tableDef);
+        } finally {
+            if (s != null) {
+                s.close();
             }
         }
     }
@@ -306,24 +403,6 @@ public class InitialiserPlugin implements PlugIn
     }
 
     private boolean validateXML(String xml, String schemaUrl, String errorCode) {
-/*        Source xmlFile = new StreamSource(xmlInputStream);
-        SchemaFactory schemaFactory = SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI);
-        try {
-            Schema schema = schemaFactory.newSchema(new StreamSource(xsdInputStream));
-            Validator validator = schema.newValidator();
-            try {
-                validator.validate(xmlFile);
-                return true;
-            } catch (SAXException se) {
-                LOG.error(xmlFile.getSystemId() + " is NOT valid");
-                blockingErrorKeys.put(errorCode, se.getMessage());
-            } catch (IOException ioe) {
-                LOG.error("Problems find file ", ioe);
-            }
-        } catch (SAXException se) {
-            LOG.error("Problems parsing xsd file", se);
-        }
-        return false;*/
         XMLValidator validator = new XMLValidator();
         validator.validate(xml, schemaUrl);
         if (validator.getErrorsAndWarnings().size() == 0) {
@@ -363,8 +442,8 @@ public class InitialiserPlugin implements PlugIn
         WebConfig retval = null;
         InputStream xmlInputStream = servletContext
             .getResourceAsStream("/WEB-INF/webconfig-model.xml");
-        InputStream xmlInputStreamForValidation = servletContext
-        .getResourceAsStream("/WEB-INF/webconfig-model.xml");
+        InputStream xmlInputStreamForValidation =
+                servletContext.getResourceAsStream("/WEB-INF/webconfig-model.xml");
         if (xmlInputStream == null) {
             LOG.error("Unable to find /WEB-INF/webconfig-model.xml.");
             blockingErrorKeys.put("errors.init.webconfig.notfound", null);
@@ -428,7 +507,7 @@ public class InitialiserPlugin implements PlugIn
     /**
      * Load keys that describe how objects should be uniquely identified
      */
-    private Map<String, List<FieldDescriptor>> loadClassKeys(Model model) {
+    private ClassKeys loadClassKeys(Model model) {
         Properties classKeyProps = new Properties();
         try {
             classKeyProps.load(InitialiserPlugin.class.getClassLoader()
@@ -437,8 +516,7 @@ public class InitialiserPlugin implements PlugIn
             LOG.error("Error loading class descriptions", e);
             blockingErrorKeys.put("errors.init.classkeys", null);
         }
-        Map<String, List<FieldDescriptor>>  classKeys =
-            ClassKeyHelper.readKeys(model, classKeyProps);
+        ClassKeys  classKeys = ClassKeyHelper.readKeys(model, classKeyProps);
         return classKeys;
     }
 
@@ -534,7 +612,7 @@ public class InitialiserPlugin implements PlugIn
 
         Collection<String> otherResources = finder.findResourcesMatching(pattern);
         for (String resource : otherResources) {
-            LOG.info("Loading extra resources from " + resource);
+            LOG.debug("Loading extra resources from " + resource);
             InputStream otherResourceStream =
                 servletContext.getResourceAsStream(resource);
             try {
@@ -564,9 +642,23 @@ public class InitialiserPlugin implements PlugIn
         }
         SessionMethods.setPropertiesOrigins(servletContext, origins);
         Properties trimProperties = trimProperties(webProperties);
+        setComputedProperties(trimProperties);
         SessionMethods.setWebProperties(servletContext, trimProperties);
         MainHelper.loadHelpers(trimProperties);
         return trimProperties;
+    }
+
+    // Propagate properties that derive their default values from other properties.
+    private void setComputedProperties(Properties props) {
+        Map<String, String> computedMapping = DERIVED_PROPERTIES;
+        for (String dest: computedMapping.keySet()) {
+            if (StringUtils.isBlank(props.getProperty(dest))) {
+                String src = computedMapping.get(dest);
+                if (src != null) {
+                    props.setProperty(dest, props.getProperty(src));
+                }
+            }
+        }
     }
 
     private Properties trimProperties(Properties webProperties) {
@@ -584,7 +676,7 @@ public class InitialiserPlugin implements PlugIn
         InputStream is = getClass().getClassLoader()
             .getResourceAsStream("openid-providers.properties");
         if (is == null) {
-            LOG.info("couldn't find openid providers, using system class-loader");
+            LOG.debug("couldn't find openid providers, using system class-loader");
             is = ClassLoader.getSystemClassLoader()
                 .getResourceAsStream("openid-properties.properties");
         }
@@ -606,13 +698,28 @@ public class InitialiserPlugin implements PlugIn
             String keyString = (String) key;
             if (!keyString.endsWith(".alias")) {
                 providers.add(keyString);
-                LOG.info("Added " + keyString);
+                LOG.debug("Added " + keyString);
             }
         }
 
         SessionMethods.setOpenIdProviders(context, providers);
     }
 
+    private void loadOAuth2Providers(ServletContext context, Properties webProperties) {
+        Set<String> providers = new LinkedHashSet<String>();
+
+        // All all the providers found in oauth2.providers that have at least
+        // a client-id configured.
+        String oauth2Providers = webProperties.getProperty("oauth2.providers", "");
+        for (String provider: oauth2Providers.split(",")) {
+            String providerName = provider.trim().toUpperCase();
+            if (webProperties.containsKey("oauth2." + providerName + ".client-id")) {
+                providers.add(providerName);
+            }
+        }
+
+        SessionMethods.setOAuth2Providers(context, providers);
+    }
 
     private LinkRedirectManager getLinkRedirector(Properties webProperties) {
         final String err = "Initialisation of link redirector failed: ";
@@ -645,7 +752,11 @@ public class InitialiserPlugin implements PlugIn
     }
 
     /**
-     * Summarize the ObjectStore to get class counts
+     * Summarise the ObjectStore to get class counts
+     *
+     * This method does not actually perform any queries, but relies on the
+     * existence of a existing set of pre-calculated counts, generated as
+     * part of the build process.
      */
     private ObjectStoreSummary summariseObjectStore(ServletContext servletContext) {
         Properties objectStoreSummaryProperties = new Properties();
@@ -663,12 +774,12 @@ public class InitialiserPlugin implements PlugIn
             blockingErrorKeys.put("errors.init.objectstoresummary.loading", null);
         }
 
-        final ObjectStoreSummary oss = new ObjectStoreSummary(objectStoreSummaryProperties);
-        return oss;
+        return new ObjectStoreSummary(objectStoreSummaryProperties);
     }
 
     private void setupClassSummaryInformation(ServletContext servletContext, ObjectStoreSummary oss,
-            final Model model) {
+            final Model model) throws ServletException {
+        String errorKey = "errors.init.objectstoresummary.classcount";
         Map<String, String> classes = new LinkedHashMap<String, String>();
         Map<String, Integer> classCounts = new LinkedHashMap<String, Integer>();
 
@@ -677,10 +788,11 @@ public class InitialiserPlugin implements PlugIn
                 classes.put(className, TypeUtil.unqualifiedName(className));
             }
             try {
-                classCounts.put(className, new Integer(oss.getClassCount(className)));
+                classCounts.put(className, Integer.valueOf(oss.getClassCount(className)));
             } catch (Exception e) {
                 LOG.error("Unable to get class count for " + className, e);
-                blockingErrorKeys.put("errors.init.objectstoresummary.classcount", e.getMessage());
+                blockingErrorKeys.put(errorKey, e.getMessage());
+                return;
             }
         }
         servletContext.setAttribute("classes", classes);
@@ -690,7 +802,12 @@ public class InitialiserPlugin implements PlugIn
         for (ClassDescriptor cld : model.getClassDescriptors()) {
             ArrayList<String> subclasses = new ArrayList<String>();
             for (String thisClassName : new TreeSet<String>(getChildren(cld))) {
-                if (classCounts.get(thisClassName).intValue() > 0) {
+                Integer classCount = classCounts.get(thisClassName);
+                if (classCount == null) {
+                    blockingErrorKeys.put(errorKey, thisClassName);
+                    return;
+                }
+                if (classCount.intValue() > 0) {
                     subclasses.add(TypeUtil.unqualifiedName(thisClassName));
                 }
             }
@@ -700,18 +817,18 @@ public class InitialiserPlugin implements PlugIn
     }
 
     private ObjectStoreWriter getUserprofileWriter(Properties webProperties) {
-        ObjectStoreWriter userprofileOSW = null;
+        ObjectStoreWriter osw = null;
         try {
             String userProfileAlias = (String) webProperties.get("webapp.userprofile.os.alias");
-            userprofileOSW = ObjectStoreWriterFactory.getObjectStoreWriter(userProfileAlias);
+            osw = ObjectStoreWriterFactory.getObjectStoreWriter(userProfileAlias);
         } catch (ObjectStoreException e) {
             LOG.error("Unable to create userprofile - " + e.getMessage(), e);
             blockingErrorKeys.put("errors.init.userprofileconnection", e.getMessage());
-            return userprofileOSW;
+            return osw;
         }
 
-        applyUserProfileUpgrades(userprofileOSW, blockingErrorKeys);
-        return userprofileOSW;
+        applyUserProfileUpgrades(osw, blockingErrorKeys);
+        return osw;
     }
 
     private void applyUserProfileUpgrades(ObjectStoreWriter osw,
@@ -730,9 +847,23 @@ public class InitialiserPlugin implements PlugIn
                         DatabaseUtil.Type.boolean_type);
                 DatabaseUtil.updateColumnValue(con, "userprofile", "superuser", false);
             }
+
+            // Create the permatoken table, if it does not exist
+            ClassDescriptor ptCld = osw.getModel().getClassDescriptorByName("PermanentToken");
+            if (!DatabaseUtil.tableExists(con, DatabaseUtil.getTableName(ptCld))) {
+                createPermaTokenTable(osw, con);
+            }
+
+            LOG.debug("SUCCESSFULLY APPLIED ALL UPGRADES");
         } catch (SQLException sqle) {
             LOG.error("Problem retrieving connection", sqle);
             blockingErrorKeys.put("errors.init.userprofileconnection", sqle.getMessage());
+        } catch (ObjectStoreException e) {
+            LOG.error("Problem upgrading database", e);
+            blockingErrorKeys.put("errors.init.userprofileconnection", e.getMessage());
+        } catch (ClassNotFoundException e) {
+            LOG.error("Problem upgrading database", e);
+            blockingErrorKeys.put("errors.init.userprofileconnection", e.getMessage());
         } finally {
             ((ObjectStoreInterMineImpl) osw).releaseConnection(con);
         }
@@ -752,42 +883,52 @@ public class InitialiserPlugin implements PlugIn
         blockingErrorKeys.put("errors.init.superusernotexist", null);
         return false;
     }
+
     private UserProfile getSuperUser(ObjectStoreWriter uosw) {
-         String superuser = PropertiesUtil.getProperties().getProperty("superuser.account");
-         UserProfile superuserProfile = new UserProfile();
-         superuserProfile.setUsername(superuser);
-         Set<String> fieldNames = new HashSet<String>();
-         fieldNames.add("username");
-         try {
-             superuserProfile = (UserProfile) uosw.getObjectByExample(superuserProfile, fieldNames);
-         } catch (ObjectStoreException e) {
-             throw new RuntimeException("Unable to load user profile", e);
-         }
-         return superuserProfile;
+        String superuser = PropertiesUtil.getProperties().getProperty("superuser.account");
+        UserProfile superuserProfile = new UserProfile();
+        superuserProfile.setUsername(superuser);
+        Set<String> fieldNames = new HashSet<String>();
+        fieldNames.add("username");
+        try {
+            superuserProfile = (UserProfile) uosw.getObjectByExample(superuserProfile, fieldNames);
+        } catch (ObjectStoreException e) {
+            throw new RuntimeException("Unable to load user profile", e);
+        }
+        return superuserProfile;
     }
 
     /**
-     * Destroy method called at Servlet destroy. Close connection pool
+     * Destroy method called at Servlet destroy. Close connection pools
+     * and the mail queue thread pool.
      */
+    @Override
     public void destroy() {
-        if (profileManager != null) {
-            ((ObjectStoreWriterInterMineImpl) profileManager.getProfileObjectStoreWriter())
-                .getDatabase().shutdown();
-        }
-        ((ObjectStoreInterMineImpl) os).getDatabase().shutdown();
-    }
+        // We're undeploying the webapp so we need to shut everything down. The ShutdownHook will
+        // shutdown all objects that have registerted themselves. However, this doesn't get
+        // called automatically unless the JVM itself (tomcat) is shut down,
+        ShutdownHook.shutdown();
 
+        // The ShutdownHook is registered JVM-wide so unless we remove it a reference will be held
+        // to the current WebappClassLoader preventing it from being garbage collected. This will
+        // cause a memory leak, where tomcat would run out of PermGen space after several deploy
+        // cycles.
+        Runtime.getRuntime().removeShutdownHook(ShutdownHook.getInstance());
+    }
 
     /**
      * Remove class tags from the user profile that refer to classes that non longer exist
      * @param tagManager tag manager
      */
     protected static void cleanTags(TagManager tagManager) {
-        List<Tag> classTags = tagManager.getTags(null, null, "class", null);
-
-        for (Tag tag : classTags) {
+        for (Tag tag : tagManager.getTagsByType(TagTypes.CLASS)) {
             // check that class exists
             try {
+                // nb: it has been discussed whether to store fully qualified
+                // or short class names in the tags table. Shorter names would save
+                // some space (but not very much). If that were to ever happen, this
+                // method would have to be changed, as otherwise it would delete all
+                // the class tags in the database.
                 Class.forName(tag.getObjectIdentifier());
             } catch (ClassNotFoundException e) {
                 tagManager.deleteTag(tag);
@@ -870,15 +1011,14 @@ public class InitialiserPlugin implements PlugIn
         return null;
     }
 
-    @SuppressWarnings("resource")
     private boolean verifyTablesExist(ObjectStore uos) {
         Connection con = null;
-        Set<ClassDescriptor> classDescritpors = uos.getModel().getClassDescriptors();
+        Set<ClassDescriptor> classDescriptors = uos.getModel().getClassDescriptors();
         try {
             con = ((ObjectStoreInterMineImpl) uos).getConnection();
-            for (ClassDescriptor cd : classDescritpors) {
+            for (ClassDescriptor cd : classDescriptors) {
                 if (!cd.isInterface()) {
-                    String tableNameToVerify = cd.getSimpleName().toLowerCase();
+                    String tableNameToVerify = DatabaseUtil.getTableName(cd);
                     if (!DatabaseUtil.tableExists(con, tableNameToVerify)) {
                         LOG.error("In the userprofile database, the table " + tableNameToVerify
                             + " doesn't exist.");
@@ -888,7 +1028,7 @@ public class InitialiserPlugin implements PlugIn
                 }
             }
         } catch (SQLException sqle) {
-            LOG.error("Probelm retrieving connection", sqle);
+            LOG.error("Problem retrieving connection", sqle);
         } finally {
             ((ObjectStoreInterMineImpl) uos).releaseConnection(con);
         }
@@ -919,8 +1059,10 @@ public class InitialiserPlugin implements PlugIn
 
     /**
      * Verify if we need to upgrade the list
+     * @param uosw A reference to the user DB.
+     * @throws ServletException if all is not right with the world
      */
-    private void verifyListUpgrade(ObjectStore uosw) {
+    private void checkSerialNumber(ObjectStore uosw) throws ServletException {
         try {
             boolean listUpgrade = false;
             String productionSerialNumber = MetadataManager.retrieve(((ObjectStoreInterMineImpl) os)
@@ -939,8 +1081,7 @@ public class InitialiserPlugin implements PlugIn
                 listUpgrade = true;
             }
             if (listUpgrade) {
-                LOG.warn("Serial numbers not equal: list upgrate needed");
-                //set current attribute to false
+                LOG.debug("Serial numbers not equal: list upgrade needed");
                 Connection conn = null;
                 try {
                     conn = ((ObjectStoreInterMineImpl) uosw).getDatabase().getConnection();
@@ -965,7 +1106,7 @@ public class InitialiserPlugin implements PlugIn
                         MetadataManager.SERIAL_NUMBER, productionSerialNumber);
             }
         } catch (SQLException sqle) {
-            throw new IllegalStateException("Error verifying list upgrading", sqle);
+            throw new ServletException("Error verifying list upgrading", sqle);
         }
     }
 }
